# Numcal

./: CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  TODO.md  build.rs  memory-usage.sh  memory.x  monitor-serial.sh  platformio.ini
.cargo/: config.toml
.github/workflows/: ci.yml  platformio.yml
include/: Animation.hpp  Calculator.hpp  DinoGame.hpp  DinoGraphics.h  Entity.hpp  KeyboardConfig.h  KeyboardInterface.hpp  Numpad.hpp  NumpadGraphics.h  Sprite.h
legacy/: README  main.rs
legacy/modes/: numpad.rs
reference/: display.rs  main.rs  usb.rs
reference/modes/: calculator.rs  numpad.rs
src/: Animation.cpp  Calculator.cpp  DinoGame.cpp  Entity.cpp  Numpad.cpp  decimal.rs  display.rs  keyboard.rs  lib.rs  main.cpp  main.rs  usb.rs
src/modes/: boot.rs  calculator.rs  dummy.rs  flash.rs  mod.rs  numpad.rs
src/tasks/: display.rs  file_system.rs  hotkeys.rs  keypad.rs  mod.rs  usb.rs  watchdog.rs
src/utils/: calc_number.rs  debounce.rs  mod.rs
test/: test_calculator.cpp
tests/: calculator_test.rs
