[package]
name = "numcal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Embassy async runtime and HAL for RP2040
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.2", features = ["defmt", "unstable-pac", "time-driver", "binary-info"] }
embassy-usb = { version = "0.3", features = ["defmt"] }
embassy-futures = "0.1"

# USB HID support
usbd-hid = "0.8"

# Display drivers
ssd1306 = "0.9"
embedded-graphics = "0.8"

# Cortex-M support
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Static cell for USB buffer
static_cell = "2.1"

# Heapless for fixed-size data structures
heapless = "0.8"

# RP2040 boot2 bootloader
rp2040-boot2 = "0.3"

[profile.release]
debug = 2
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
debug = 2
lto = false
opt-level = 1
